--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ copyright: 2019 Yannick
 maintainer: https://www.dev-log.me
 dependencies:
 - mtl
+- optparse-applicative
 - hspec
 - base >= 4.7 && < 5
 name: notionfy
