--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,7 @@ tests:
 copyright: 2019 Yannick
 maintainer: https://www.dev-log.me
 dependencies:
+- notion-api
 - either
 - parsec
 - transformers
