--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,9 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps: 
+- github: yannick-cw/notion-api
+  commit: aa0635802c481ae2c1776697d7fda6e42ee8d097 
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
